fixed h3 spacing

--- a/blog/blog.css
+++ b/blog/blog.css
@@ -20,6 +20,11 @@ h2 {
   padding-top: 25px;
 }
 
+h3 {
+  padding-top: 30px;
+  padding-bottom: 15px;
+}
+
 p {
   padding: 5px;
 }
